# subtyping_software

./: LICENSE  README.md  adjusted_wallace.py  dependencies.txt  discrimination_index.py  pyproject.toml  subtyping_app.py  wallace_coefficient.py
scripts/: Wallace.ipynb
src/src/statistical_tests/: adjusted_wallace.py  discrimination_index.py  wallace_coefficient.py
src/statistical_tests/: adjusted_wallace.py  discrimination_index.py  phenotype_association_test.py  shannon_index.py  wallace_coefficient.py
src/subtyping_app.egg-info/: PKG-INFO  SOURCES.txt
test/: DiscriminationIndex_test.py  WallaceCoefficient_test.py  test_adjusted_wallace.py  test_data.csv  test_phenotype_association_test.py  test_shannon_index.py  test_test.py  test_wallace_coefficient.py
