[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subtyping-app"
version = "0.0.0"
description = "Subtyping software application"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy", "pandas", 'scitkit-learn', "scipy", "matplotlib", "seaborn", "pytest"]
authors = [{name = "You", email = "you@example.com"}]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]